@@ -1,3 +1,5 @@
 {"id":{"@type":"g:Int32","@value":2000},"label":"message","inE":{"link":[{"id":{"@type":"g:Int32","@value":2003},"outV":{"@type":"g:Int32","@value":2000}}]},"outE":{"link":[{"id":{"@type":"g:Int32","@value":2002},"inV":{"@type":"g:Int32","@value":2001}},{"id":{"@type":"g:Int32","@value":2003},"inV":{"@type":"g:Int32","@value":2000}}]},"properties":{"name":[{"id":{"@type":"g:Int64","@value":1},"value":"a"}]}}
 {"id":{"@type":"g:Int32","@value":2001},"label":"message","inE":{"link":[{"id":{"@type":"g:Int32","@value":2002},"outV":{"@type":"g:Int32","@value":2000}}]},"properties":{"name":[{"id":{"@type":"g:Int64","@value":2},"value":"b"}]}}
 {"id":{"@type":"g:Int32","@value":1000},"label":"loops","inE":{"self":[{"id":{"@type":"g:Int32","@value":1001},"outV":{"@type":"g:Int32","@value":1000}}]},"outE":{"self":[{"id":{"@type":"g:Int32","@value":1001},"inV":{"@type":"g:Int32","@value":1000}}]},"properties":{"name":[{"id":{"@type":"g:Int64","@value":0},"value":"loop"}]}}
+{"id":{"@type":"g:Int32","@value":3000},"label":"person","outE":{"knows":[{"id":{"@type":"g:Int32","@value":3002},"inV":{"@type":"g:Int32","@value":3001}}]},"properties":{"name":[{"id":{"@type":"g:Int64","@value":3010},"value":"alice"}],"age":[{"id":{"@type":"g:Int64","@value":3011},"value":{"@type":"g:Int32","@value":30}}]}}
+{"id":{"@type":"g:Int32","@value":3001},"label":"person","inE":{"knows":[{"id":{"@type":"g:Int32","@value":3002},"outV":{"@type":"g:Int32","@value":3000}}]},"properties":{"name":[{"id":{"@type":"g:Int64","@value":3010},"value":"bob"}],"age":[{"id":{"@type":"g:Int64","@value":3011},"value":{"@type":"g:Int32","@value":30}}]}}
